--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background: var(--bg);
+  background: 
+    linear-gradient(rgba(245,242,234,0.85), rgba(245,242,234,0.85)),
+    url("unnamed.webp") center/cover no-repeat fixed;
   color: var(--dark);
   line-height: 1.6;
 }
