--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@ section {
   max-width: 1100px;
   margin: 60px auto;
   padding: 50px 30px;
-  background: rgba(255,255,255,0.6);
-  backdrop-filter: blur(12px);
-  -webkit-backdrop-filter: blur(12px);
+  background: rgba(255,255,255,0.82); /* DAHA ŞEFFAF */
+  backdrop-filter: blur(4px);          /* BLUR AZ */
+  -webkit-backdrop-filter: blur(4px);
   border-radius: 18px;
-  box-shadow: 0 20px 50px rgba(0,0,0,0.15);
+  box-shadow: 0 20px 50px rgba(0,0,0,0.18);
 }
 
 /* HERO */
