--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background: 
-    linear-gradient(rgba(245,242,234,0.85), rgba(245,242,234,0.85)),
-    url("unnamed.webp") center/cover no-repeat fixed;
-  color: var(--dark);
+  background:
+    linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
+    url("arkaplan.jpg") center/cover no-repeat fixed;
+  color: #111;
   line-height: 1.6;
 }
 
