--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background:
     linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
-    url("arkaplan.jpg") center/cover no-repeat fixed;
+    url("unnamed.webp") center/cover no-repeat fixed;
   color: #111;
   line-height: 1.6;
 }
