--- a/index.html
+++ b/index.html
@@ -135,7 +135,42 @@ footer {
     oluşturmasını hedefler.
   </p>
 </section>
+<!-- NEDEN YULA -->
+<section>
+  <h2>Neden YULA?</h2>
 
+  <p>
+    YULA Dershane, yalnızca ders anlatan bir kurum değil;
+    öğrencinin gelişimini bütüncül şekilde ele alan bir eğitim merkezidir.
+  </p>
+
+  <ul>
+    <li>
+      <strong>Ortaokula Özel Odak:</strong>
+      Tüm programlarımız yalnızca ortaokul öğrencileri için hazırlanır.
+    </li>
+
+    <li>
+      <strong>Birebir Takip Sistemi:</strong>
+      Her öğrencinin eksikleri düzenli olarak analiz edilir ve özel planlama yapılır.
+    </li>
+
+    <li>
+      <strong>Disiplinli ve Güvenli Ortam:</strong>
+      Öğrencilerin dikkatini dağıtan unsurlardan uzak, motive edici bir eğitim alanı.
+    </li>
+
+    <li>
+      <strong>Alanında Uzman Eğitmenler:</strong>
+      Deneyimli öğretmen kadrosu ile sağlam akademik temel.
+    </li>
+
+    <li>
+      <strong>Veli ile Sürekli İletişim:</strong>
+      Öğrenci gelişimi velilerle şeffaf şekilde paylaşılır.
+    </li>
+  </ul>
+</section>
 <!-- EĞİTİM ALANLARI -->
 <section>
   <h2>Eğitim Alanlarımız</h2>
