--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@ footer {
 </section>
 
   <!-- NEDEN YULA -->
-<section>
+<section class="neden-yula">
   <h2>Neden YULA?</h2>
+  
 
   <p>
     YULA Dershane, yalnızca ders anlatan bir kurum değil;
