--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ footer {
     <a class="btn" href="https://maps.app.goo.gl/Y6twopxbHMd2WHZWA" target="_blank">
       Google Maps
     </a>
-    <a class="btn" href="https://www.instagram.com/yulaegitimkurumu?igsh=MXB1bmkzYXlpOG1hdQ==" target="_blank">
+    <a class="btn" href="https://share.google/dJPAyhrwIrOaeUklu" target="_blank">
       Instagram
     </a>
   </div>
